--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
 
 
 #map { 
-    height: 400px; 
-    width: 600px;
+    height: 35rem; 
+    width: 53rem;
     margin: auto;
     border: solid 1px;
 }
@@ -41,10 +41,12 @@ body {
 
 h1 {
     background-color: #6687a0;
-    margin-bottom: 3px;
+    margin-bottom: 1%;
+    padding: 2.2%;
 }
 
 h1 span {
+    font-size: 1.2em;
     display: block;
     animation: reveal 1.5s cubic-bezier(0.77, 0, 0.175, 1) 0.5s;
 }
@@ -61,8 +63,9 @@ h1 span {
 
 h2 {
    margin: 2em 0em 3em 0em; 
-   padding: 0.3em;
+   padding: 1.6%;
    background-color: #65a7da;
+   font-size: 1.5em;
 }
 
 p{
@@ -96,25 +99,43 @@ p{
 
 .name {
     margin: 0px;
+    border-bottom: 0.6px black solid;
 }
 
 .adress {
-    margin: 0px;
+    margin: 1.3em 0em  0em 0em;
 }
 
 .allbuttons {
-    display:grid;
-    grid-template-rows: auto auto;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: baseline;
+    align-content: stretch;
+} 
+
+.navigation {
+    width: 7%;
 }
 
-.accueil {
+.pages {
+width: 90%;
+}
 
+.pagination {
+    width: 7%;
+    flex-grow: 1;
+    align-self: center;
+}
+
+
+.accueil {
     display: grid;
     grid-template-columns: auto auto;
-
 }
 
 .texte {
+margin: 2%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
@@ -123,10 +144,36 @@ p{
 
 aside {
 align-self: flex-end;
+font-size: 1em;
 }
 
 .list {
     background-color: rgb(245, 237, 226);
     border: 1.5px black solid; 
     padding : 10px;
+}
+
+footer{
+    background-color: #90b1ca;
+    margin-top: 1%;
+    padding: 1.7%;
+    font-size: 1rem;
+}
+
+nav:first-of-type{
+    display: flex;
+    flex-direction: column;
+    align-items:safe;
+}
+
+nav span {
+    font-size: 0.8rem;
+    font-weight: 700;
+}
+
+nav:last-of-type{
+    display: flex;
+    flex-direction: column;
+    align-items: self-end;
+    align-content: baseline;
 }
